--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -167,7 +167,8 @@ include_directories(
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
 catkin_install_python(PROGRAMS
-  nodes/socketio_relay.py
+#   nodes/socketio_relay.py
+  src/socketio_relay.py
 #   scripts/my_python_script
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
