--- a/package.xml
+++ b/package.xml
@@ -8,6 +8,7 @@
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
   <maintainer email="sungsik@gmail.com">sungsik</maintainer>
+  <maintainer email="earthicko@gmail.com">Lee Donghyeon</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
