--- a/package.xml
+++ b/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="sungsik@gmail.com">sungsik</maintainer>
+  <maintainer email="kssjustin98@gmail.com">Kong Sungsik</maintainer>
   <maintainer email="earthicko@gmail.com">Lee Donghyeon</maintainer>
 
 
